[package]
name = "gh-ec-audit"
description = "Because GitHub just doesn't provide the APIs you need to audit External Collaborators."
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.28", features = ["derive"] }
colored = "2.0.0"
csv = "1.3"
regex = "1.11.1"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
urlencoding = "2.1.3"
