[package]
name = "gh-ec-audit"
description = "Because GitHub just doesn't provide the APIs you need to audit External Collaborators."
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
csv = "1.3"
lazy_static = "1.5"
regex = "1.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
