[package]
name = "gh-ec-audit"
description = "Because GitHub just doesn't provide the APIs you need to audit External Collaborators."
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
csv = "1.3"
hex = "0.4"
lazy_static = "1.5"
regex = "1.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
urlencoding = "2.1"
walkdir = "2.4"
zip = "0.6"
