[package]
name = "spotcheck"
description = "Sometimes you need to spot check GitHub organization permissions because they don't provide APIs for that."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
colored = "2.0.0"
csv = "1.3"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
